re-run experiments without fixed context in validation set; added notebooks

--- a/notebooks/Automate Preparation and Inference Scripts.ipynb
+++ b/notebooks/Automate Preparation and Inference Scripts.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-04-18T17:44:50.570350Z",
-     "end_time": "2023-04-18T17:44:52.704905Z"
+     "start_time": "2023-05-04T15:21:47.511599Z",
+     "end_time": "2023-05-04T15:21:47.518765Z"
     }
    },
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "training_protocol =\"joint\"\n",
@@ -29,12 +29,16 @@
     "mpc=5"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-05-04T15:21:47.521178Z",
+     "end_time": "2023-05-04T15:21:47.528178Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "template = \"python run_pets_script.py --cs_seed {cs_seed} --search_space {search_space} --horizon {horizon} --num_random_trajectories {trajectories} --num_particles {particles} --mpc_seed {mpc} --apply_lookahead {apply_lookahead} --load_pretrained {load_pretrained};\"\n",
@@ -44,12 +48,16 @@
     "subfolder2 = f\"if [[ $apply_lookahead  -eq  1 ]]; then subfolder2=LookAhead; else subfolder2=MPC; fi\""
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-05-04T15:21:47.529748Z",
+     "end_time": "2023-05-04T15:21:47.536693Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -65,13 +73,13 @@
     "                    '5891', '5906', '5965', '5970', '5971', '6766',\n",
     "                    '6767', '6794', '7607', '7609', '5889']:\n",
     "    script = \"for particles in \"\n",
-    "    for particles in [10, 100, 1000]:\n",
+    "    for particles in [10, 100]:\n",
     "        script += f\"{particles} \"\n",
     "    script += \"; do for horizon in \"\n",
     "    for horizon in [3 , 5, 10]:\n",
     "        script += f\"{horizon} \"\n",
     "    script += \"; do for trajectories in \"\n",
-    "    for trajectories in [100, 250, 500]:\n",
+    "    for trajectories in [10, 100]:\n",
     "        script += f\"{trajectories} \"\n",
     "    script += \"; do for apply_lookahead in \"\n",
     "    for apply_lookahead in [0, 1]:\n",
@@ -104,32 +112,32 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-18T23:52:54.676639Z",
-     "end_time": "2023-04-18T23:52:54.813588Z"
+     "start_time": "2023-05-04T15:21:47.555350Z",
+     "end_time": "2023-05-04T15:21:48.081622Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
-      "text/plain": "'for particles 10 100 1000 ; do for horizon in 3 5 10 ; do for trajectories in 100 250 500 ; do for apply_lookahead in 0 1 ; do for load_pretrained in 0 1 ; do python run_pets_script.py --cs_seed 45 --search_space 4796 --horizon $horizon --num_random_trajectories $trajectories --num_particles particles --mpc_seed 5 --apply_lookahead $apply_lookahead --load_pretrained $load_pretrained;done;done;done;done;done'"
+      "text/plain": "'for particles in 10 100 ; do for horizon in 3 5 10 ; do for trajectories in 10 100 ; do for apply_lookahead in 0 1 ; do for load_pretrained in 1 0 ; do if [[ $load_pretrained  -eq  1 ]]; then subfolder1=pre-trained; else subfolder1=random-initialization; fi; if [[ $apply_lookahead  -eq  1 ]]; then subfolder2=LookAhead; else subfolder2=MPC; fi; for file in  scripts/sbatch/5889/joint/$subfolder1/cs_seed-45/test/horizon-$horizon/trajectories-$trajectories/particles-$particles/$subfolder2/mpc-5/*; do msub $file;done;done;done;done;done;done;'"
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "script"
+    "script_run"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-18T23:14:51.853231Z",
-     "end_time": "2023-04-18T23:14:51.859245Z"
+     "start_time": "2023-05-04T15:21:48.081744Z",
+     "end_time": "2023-05-04T15:21:48.148532Z"
     }
    }
   }
